fixed alignment of nav bar- text centered

--- a/public/styles.css
+++ b/public/styles.css
@@ -3,15 +3,17 @@
   line-height: 1.5;
   background: url(https://snap-photos.s3.amazonaws.com/img-thumbs/960w/B8911F21A4.jpg) no-repeat;
   position: fixed;
-  background-size: cover;
+  background-size: 100% 100%;
   margin: 0;
   background-color: none;
-  height: 100%
+  height: 100%;
+  width: 100%;
 }
 
 .indexcolor {
   background-color:rgba(11,158,141,0.5);
   height: 100%;
+  width: 100%;
 
 }
 
@@ -19,7 +21,10 @@
   height: 100px;
   font-size: 50px;
   text-align: center;
+}
 
+.welcome{
+  padding-bottom: 35px;
 }
 
  nav{
@@ -28,6 +33,7 @@
   margin: 0px
   width: 100%;
   display:block;
+  text-align: center;
 }
 
 nav li {
@@ -45,7 +51,9 @@ nav li {
 
 
 a:link {
- color: #800080
+ color: #800080;
+ text-decoration:none;
+ cursor:pointer;
 }
 
 a:visited {
